--- a/app/src/main/res/layout/rodents_item_list.xml
+++ b/app/src/main/res/layout/rodents_item_list.xml
@@ -20,35 +20,129 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:layout_marginTop="15dp"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/view3"
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="20dp"
-            android:elevation="32dp"
-            android:gravity="center"
-
-            app:cardBackgroundColor="#A31A1A"
-            app:cardCornerRadius="60dp"
-            app:cardElevation="5dp">
-
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageViewList_rodent"
-                android:layout_width="147dp"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:background="@drawable/rounded_image_view"
-                android:cropToPadding="true"
+                android:id="@+id/buttonEdit_rodent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:tint="#0375a8"
+                app:srcCompat="@drawable/ic_edit" />
 
-                android:scaleType="centerCrop"
-                android:src="@android:drawable/ic_menu_camera" />
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="Edytuj"
+                android:textAlignment="center"
+                android:textColor="#014D70"
+                android:textColorHint="#77147A"
+                android:textSize="16sp" />
+        </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+        <LinearLayout
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center|top"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/view3"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_centerVertical="true"
+                android:elevation="32dp"
+                android:gravity="center"
+
+                app:cardBackgroundColor="#A31A1A"
+                app:cardCornerRadius="60dp"
+                app:cardElevation="5dp">
+
+
+                <ImageView
+                    android:id="@+id/imageViewList_rodent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:background="@drawable/rounded_image_view"
+                    android:cropToPadding="true"
+
+                    android:scaleType="centerCrop"
+                    android:src="@android:drawable/ic_menu_camera" />
+
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"></LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"></LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/buttonRodentsPetHealth"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/roundbutton_small_green"
+                android:textColor="#FFFFFF"
+                android:textSize="22sp"
+                android:tint="#498A32"
+                app:srcCompat="@drawable/ic_pet_health"
+                app:strokeColor="#0375a8"
+                app:strokeWidth="3dp" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Zdrowie"
+                android:textAlignment="center"
+                android:textColor="#014D70"
+                android:textColorHint="#77147A"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"></LinearLayout>
+
     </LinearLayout>
 
     <TextView
@@ -66,7 +160,7 @@
     <TextView
         android:id="@+id/textViewName_rodent"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text="Imię"
         android:textColor="#014D70"
@@ -87,12 +181,11 @@
     <TextView
         android:id="@+id/textViewGender_rodent"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:text="brak"
         android:textColor="#014D70"
-        android:textSize="24sp"
-        android:layout_marginLeft="20dp"
-        />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/textView5"
@@ -108,15 +201,14 @@
     <TextView
         android:id="@+id/textViewDate_rodent"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:text="brak"
         android:textColor="#014D70"
-        android:textSize="24sp"
-        android:layout_marginLeft="20dp"
-        />
+        android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/textViewFur_rodentText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Umaszczenie:"
@@ -129,15 +221,14 @@
     <TextView
         android:id="@+id/textViewFur_rodent"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
         android:text="brak"
         android:textColor="#014D70"
-        android:textSize="24sp"
-        android:layout_marginLeft="20dp"
-        />
+        android:textSize="24sp" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textViewNotes_rodentText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Ewentualne notatki:"
@@ -160,30 +251,7 @@
         android:layout_margin="6dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/buttonEdit_rodent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:backgroundTint="#048FCD"
-            android:text="Edytuj"
-            app:strokeColor="#0375a8"
-            app:strokeWidth="3dp" />
-
-        <Button
-            android:id="@+id/buttonDelete_rodent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:backgroundTint="#DC3E3E"
-            android:text="Usuń"
-            app:strokeColor="#9A2C2C"
-            app:strokeWidth="3dp" />
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 
     <View
         android:layout_width="match_parent"
