--- a/app/src/main/res/layout/visits_item_list.xml
+++ b/app/src/main/res/layout/visits_item_list.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:background="#ACC5E1"
         android:orientation="vertical"
-        tools:context=".Visits.ViewVisits">
+        tools:context=".ROOM.Visits.ViewVisits">
 
 
         <TextView
